# snowbear

./: .gitignore  Makefile  README.md  pyproject.toml
snowbear/: __init__.py  dataset.py  sql.py
snowbear/dataframes/: __init__.py  analytics.py  encoders.py  enums.py  functions.py  session.py  sql_dataframe.py  terms.py  utils.py
snowbear/dataframes/dialects/: __init__.py  snowflake.py  sqlite.py
snowbear/dataframes/transformations/: dataframe_transformation.py  groupby_transformation.py  join_transformation.py  join_using_transformation.py  merge_transformation.py  orderby_transformation.py  raw_sql_transformation.py  select_transformation.py  set_transformation.py  transformations.py  where_transformation.py
tests/: test_dataframes.py  test_snowflake_connection.py  test_sql_functions.py
tests/dataframes/: test_aggregations.py  test_basic_sql.py  test_custom_sql.py  test_dataframes.py  test_joins.py
